# advent_of_code

./: Cargo.toml  README.md
src/parser/: parser.rs
src/y2016/day1/: data.txt  main.rs  module.rs
src/y2016/day2/: main.rs  module.rs
src/y2016/day3/: main.rs  module.rs
src/y2016/day4/: main.rs  module.rs
src/y2016/day5/: main.rs  module.rs
src/y2016/day6/: main.rs  module.rs
src/y2016/day7/: main.rs  module.rs
